Work on spaces